--- a/App.Web/Views/DistrictSubmission/IndexBrac.cshtml
+++ b/App.Web/Views/DistrictSubmission/IndexBrac.cshtml
@@ -74,12 +74,12 @@
                 <div class="filter-item">
                     <label for="info_source"> বিভাগ</label>
                     @*<select class="searchable-dropdown form-control select2-hidden-accessible" id="info_source" data-select2-id="info_source" tabindex="-1" aria-hidden="true">
-                            <option data-select2-id="2">Communicable diseases</option>
-                            <option>Communicable diseases</option>
-                            <option>Communicable diseases</option>
-                            <option>Communicable diseases</option>
-                            <option>Communicable diseases</option>
-                        </select>*@
+                <option data-select2-id="2">Communicable diseases</option>
+                <option>Communicable diseases</option>
+                <option>Communicable diseases</option>
+                <option>Communicable diseases</option>
+                <option>Communicable diseases</option>
+            </select>*@
                     @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Divisions", new { @class = "searchable-dropdown form-control" })
 
                 </div>
@@ -90,14 +90,10 @@
 
 
                 </div>
-
-                @*<div class="filter-item">
-                        <label for="districts">উপজেলা</label>
-                        @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Upazillas", new { @class = "searchable-dropdown form-control" })
-                    </div>*@
-                @*<div class="filter-item">
+                <div class="filter-item">
                     <label for="start_date">সার্চের শুরুর তারিখ</label>
                     <div class="input-group datepicker flatpickr">
+                        @*<input value="" autocomplete="off" id="start_date" name="start_date" type="hidden" class="form-control flatpickr-input" data-input=""><input class="input-group datepicker flatpickr form-control input" placeholder="" tabindex="0" type="text">*@
                         @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-group datepicker flatpickr form-control input", @placeholder = "Date" })
                         <div class="input-group-append border-0 calender-icon">
                             <button class="btn" type="button" data-toggle="">
@@ -109,6 +105,7 @@
                 <div class="filter-item">
                     <label for="end_date">সার্চের শেষ তারিখ</label>
                     <div class="input-group datepicker flatpickr">
+                        @*<input value="" autocomplete="off" id="end_date" name="end_date" type="hidden" class="form-control flatpickr-input" data-input=""><input class="input-group datepicker flatpickr form-control input" placeholder="" tabindex="0" type="text">*@
                         @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-group datepicker flatpickr form-control input", @placeholder = "Date" })
                         <div class="input-group-append border-0 calender-icon">
                             <button class="btn" type="button" data-toggle="">
@@ -116,7 +113,8 @@
                             </button>
                         </div>
                     </div>
-                </div>*@
+                </div>
+
                 <div class="filter-item">
                     <button id="dateSearchButton" class="btn btn-bracify search">
                         <span>Search</span>
@@ -176,7 +174,8 @@
 @section scripts{
     <script type="text/javascript">
     $(document).ready(function () {
-
+        DatePicker('FromDate', 'dd MMM, yyyy');
+        DatePicker('ToDate', 'dd MMM, yyyy');
         $("#prn").click(function () {
             $("#gridTable").printThis();
         });
@@ -216,8 +215,8 @@
             var addPost = {
                 'ContentTypeId1': 'ContentTypeId1',
                 'ContentTypeId2': 'ContentTypeId2',
-                //'FromDate': 'FromDate',
-                //'ToDate': 'ToDate',
+                'FromDate': 'FromDate',
+                'ToDate': 'ToDate',
                 'isSum': 'isSum'
             }
             var btns = {
