--- a/App.Web/Views/WorkstationLeaveQuarantine/Index.cshtml
+++ b/App.Web/Views/WorkstationLeaveQuarantine/Index.cshtml
@@ -220,8 +220,12 @@
                             Is WorkStation Left By Doctor
                         </th>
                         <th>
-                            WorkStation Left By Doctor Date
+                            WorkStation Left By Doctor From Date
                         </th>
+                        <th>
+                            WorkStation Left By Doctor To Date
+                        </th>
+                        
                         <th>
                             Comment
                         </th>
@@ -289,7 +293,7 @@
                 'PIN':'PIN'
             }
             var btns = {
-                33: false //column number : is button group
+                34: false //column number : is button group
             };
 
             /*data grid initializer*/
